--- a/week13/styles.css
+++ b/week13/styles.css
@@ -41,8 +41,20 @@ input, button {
     box-shadow:0px 0px 5px rgb(0, 0, 0, 0.1);
     padding: 10px;
     margin: 2px 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #757575;
     border-radius: 5px;
+}
+
+.di {
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin: 1px;
+    text-align: center;
+}
+
+#di1 > input {
+    border-color: lightgrey;
 }
 
 button {
