--- a/week15/minesweeper.css
+++ b/week15/minesweeper.css
@@ -53,11 +53,19 @@ span.count {
     font-size: 20px;
     cursor: default;
 }
-span.cnt0{color: : #000000;}
-span.cnt1{color: : #000000;}
-span.cnt2{color: : #000000;}
-span.cnt3{color: : #000000;}
-span.cnt4{color: : #000000;}
-span.cnt5{color: : #000000;}
-span.cnt6{color: : #000000;}
-span.cnt7{color: : #000000;}
+span.cnt0{color: #000000;}
+span.cnt1{color: #007B00;}
+span.cnt2{color: #FF0000;}
+span.cnt3{color: #00007B;}
+span.cnt4{color: #7B0000;}
+span.cnt5{color: #00007B;}
+span.cnt6{color: #007B7B;}
+span.cnt7{color: #FFFFFF;}
+span.bomb {
+    position:absolute;
+    top:1px;
+    left:0px;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: default;
+}
