--- a/week15/minesweeper.css
+++ b/week15/minesweeper.css
@@ -63,8 +63,8 @@ span.cnt6{color: #007B7B;}
 span.cnt7{color: #FFFFFF;}
 span.bomb {
     position:absolute;
-    top:5px;
-    left:3px;
+    top:0;
+    left:0;
     font-weight: bold;
     font-size: 16px;
     cursor: default;
